NavBar z-index fixed.

--- a/src/styles/NavBarContainer.module.scss
+++ b/src/styles/NavBarContainer.module.scss
@@ -6,6 +6,7 @@ nav {
   padding: 10px 0;
   position: sticky;
   top: 0;
+  z-index: 1;
 
   img {
     width: 55px;
